--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
 	<meta charset="utf-8">
 	<title>Playground</title>
 	<script src="https://unpkg.com/vue@next"></script>
+	<style type="text/css">
+	.demo {
+		font-family: sans-serif;
+		border: 1px solid #eee;
+		border-radius: 2px;
+		padding: 20px 30px;
+		margin-top: 1em;
+		margin-bottom: 40px;
+		user-select: none;
+		overflow-x: auto;
+	}
+	</style>
 </head>
 <body>
 	<script src="hi.js"></script>
-	Here is a hello world.
+	<p>Here is a hello world.</p>
+	<div id="hello-vue" class="demo"> {{ message }}</div>
 	<script>hi("Kangaroo")</script>
 
 </body>
